kubernetes/nginx-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: salespeach_nginx:latest
        imagePullPolicy: Never
        resources:
          limits:
            memory: "500Mi"
            cpu: "1"
        ports:
        - containerPort: 80
        - containerPort: 443
        
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
