kubernetes/openai-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openai
  labels:
    app: openai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openai
  template:
    metadata:
      labels:
        app: openai
    spec:
      containers:
      - name: openai-api-sales-peach
        image: openai_api_sales_peach:latest
        imagePullPolicy: Never
        # image: europe-west3-docker.pkg.dev/studied-reason-374616/salespeach/mysql:latest 
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: openai-svc
spec:
  # type: NodePort
  selector:
    app: openai
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8000
      # nodePort: 30099
---
