kubernetes/salespeach-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: salespeach
  labels:
    app: salespeach
spec:
  replicas: 1
  selector:
    matchLabels:
      app: salespeach
  template:
    metadata:
      labels:
        app: salespeach
    spec:
      containers:
      - name: salespeach
        image: europe-west3-docker.pkg.dev/studied-reason-374616/salespeach/salespeach:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: salespeach-svc
spec:
  type: NodePort
  selector:
    app: salespeach
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8000
      nodePort: 30100
